@@ -96,6 +96,7 @@ Version 1.3.13:
      time (instead of half the times)
    * fix some latency for clearing fogged corners on shrouded maps
    * optimization of the pathfinding and unit loading
+   * avoid deferring null pointers in the multiplayer lobby
 
 Version 1.3.12:
  * campaigns:
